# buildpipes

./: README.md
sdlopencvopengl/linux/: Dockerfile
sdlopencvopengl/test/: CMakeLists.txt  copy_deps.sh  main.cpp  readme.md
